--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .show-page {
-  padding-top: 32px;
+  // padding-top: 32px;
   .show-text {
     width: 90%;
     margin: auto;
@@ -17,7 +17,7 @@ body {
 
 
 .landscape {
-  width: 100%;
+  width: 98%;
   padding: 15px;
 }
 
@@ -27,7 +27,7 @@ body {
 }
 
 .portrait {
-  width: 50%;
+  width: 49%;
   padding: 15px;
 }
 
